# note-svelte-django

./: .gitignore  graphiql.gql  graphiql.txt
backend/: pyproject.toml
backend/noteproject/: db.sqlite3
backend/noteproject/noteapp/: admin.py  models.py  schema.py  serializers.py  views.py
backend/noteproject/noteapp/migrations/: 0001_initial.py  0002_auto_20220127_0136.py  0002_auto_20220526_0024.py  0003_alter_note_title.py  0003_note_important.py  0004_alter_note_title.py  0005_alter_note_memo.py
backend/noteproject/noteproject/: schema.py  settings.py  urls.py
frontend/noteproject/: package-lock.json  package.json  tailwind.config.cjs
frontend/noteproject/src/: app.css
frontend/noteproject/src/components/atoms/: ButtonSet.svelte  Memo.svelte  TimeShow.svelte  Title.svelte
frontend/noteproject/src/components/molecules/: Note.svelte  NoteContain.svelte
frontend/noteproject/src/lib/: client.ts
frontend/noteproject/src/queries/: noteQueries.ts
frontend/noteproject/src/routes/: __error.svelte  complete.svelte  important.svelte  index.svelte  login.svelte  register.svelte
frontend/noteproject/src/routes/auth/: login.svelte  register.svelte
frontend/noteproject/src/stores/: notestore.ts
frontend/noteproject/src/types/: Note.ts
react-frontend/: package-lock.json
react-frontend/noteproject/: package-lock.json  package.json
react-frontend/noteproject/src/: AuthPage.js
